# Data_Eng_Project

./: LICENSE  README.md
Module1 Assignment/: LICENSE  Makefile  README.md  main.py  pyproject.toml
Module1 Assignment/Kaggle Wine data set/: features.py  module1_assign.py  plots.py
Module1 Assignment/Kaggle Wine data set/modeling/: predict.py  train.py
Module1 Assignment/docs/: mkdocs.yml
Module1 Assignment/docs/docs/: index.md
Module1 Assignment/src/: __init__.py  data_loader.py  dataset.py  module1_assign.py  preprocessing.py  utils.py.txt  visualization.py
